--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ html, body {
         margin-top:12px;
       }
     .has-bg-img { 
-      background: url("https://github.com/pmagtulis/subway-nyc/assets/train.jpeg"); 
+      background: url("https://pmagtulis.github.io/subway-nyc/assets/train.jpeg"); 
       background-size:cover; 
+	  background-position: center center;
     }
     .share-btn-container a i {
 		  font-size: 24px;
