--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Iconic subway seen to outlast pandemic's lasting effects">
 	<meta property="og:description" content="Trains shunned, but not abandoned, depict resilience of New York's lifeblood.">
 	<meta property="og:type" content="article">
-	<meta property="og:image" content="https://pmagtulis.github.io/assets/port.jpeg">
+	<meta property="og:image" content="https://pmagtulis.github.io/subway-nyc/assets/train.jpeg">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:creator" content="@prinzmagtulis">
 
@@ -138,9 +138,6 @@ html, body {
             Yet even as riders avoided the subway, they never completely abandoned it. Morcos unhesitatingly boards the subway on weekends, relying on its vast network to meet friends for dinners and run errands on her free day. She said she wouldn't have it any other way. 
             "There's no better way to get to your destination fast and the subway is also less crowded during weekends so it's very convenient," she said.
           </div>
-          <div class="block">
-            <p class="mb-1 title is-5">640 8th Avenue sees complaints about air quality rise...</p>
-        </div>
         <figure class="image is-fullwidth-centered">
             <img src="https://pmagtulis.github.io/assets/port.jpeg" alt="The Port Authority Bus Terminal at 8th Avenue in Midtown Manhattan">
             <figcaption><em><small>Built in 1953, engineers say the bus terminal located downtown has been operating beyond capacity.</em> Source: New York Times</small></figcaption>
