--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ html, body {
     <br>
             <br>
             <div class="block">
-              <em>This project is in partial fulfillment of requirements for master of science degree in data journalism at Columbia University.</em> <em>See code and data <a href="https://github.com/pmagtulis/311-complaints-air-quality" target="_blank">here</a>.</em>
+              <em>This project is in partial fulfillment of requirements for master of science degree in data journalism at Columbia University.</em> <em>See code and data <a href="https://github.com/pmagtulis/subway-nyc.git" target="_blank">here</a>.</em>
             </div>
         </div>
 		</section>
