--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ html, body {
     </div>
     <div class="block">
         For the most part however, Freemark said commuters choose to ride the subway because the benefits of convenience and getting to destination on time still outweigh the risks. 
-		And this shows even among people who have grown averse of the subway: Morcos said she doesn't foresee ditching the subway anytime soon. Daanoy said it's just impossible to do it, while Tomito, a tourist, said it remains an option for her when visiting.
+		And this shows even among people who have grown averse of the subway: Morcos said she doesn't foresee ditching the subway anytime soon. Daanoy said it's just impossible to do it, while Tomita, a tourist, said it remains an option for her when visiting.
     </div>
     <div class="block">
         Attracting passengers lost back to the system is good, but Abdallah said it also may be time to shift focus to the ones left. Planning for a "new normal", he said, involves devising a plan that involves the efficient use of subway resources. 
