--- a/index.html
+++ b/index.html
@@ -430,10 +430,11 @@ html, body {
 	<p class="subtitle is-6">Source: Tomtom Traffic Index 2021</p>
 	</div>
     <div class="block">
-        The subway's reliability is coupled with fare affordability. Hanna Nicole Daanoy, 24, takes the F- or E-train from Queens to W 4th Street to report to work daily. A restaurant manager at L' Artusi in West Village, she sends money to her family in the Philippines as monthly allowance which means she follows a strict budget that does not include an Uber ride.
+        The subway's reliability is coupled with fare affordability. Hanna Nicole Daanoy, 24, takes the F- or E-train from Queens to W 4th Street to report to work daily. A restaurant manager at L' Artusi in West Village, she sends money to her family in the Philippines as monthly allowance which means she follows a strict budget that does not cover an Uber ride.
     </div>
     <div class="block">
-        Using Uber's own <a href="https://www.uber.com/global/en/price-estimate/" target="_blank">fare calculator</a>, an Uber X ride going home would cost Daanoy roughly $20 at the minimum, nearly tenfold the subway fare. "I'm afraid to take the subway alone at night because of what is happening. Sometimes I just not go out to save money," Daanoy said, citing the spate of crimes for avoiding the subway at night.
+        Using Uber's own <a href="https://www.uber.com/global/en/price-estimate/" target="_blank">fare calculator</a>, an Uber X ride going home would cost Daanoy roughly $20 at the minimum, nearly tenfold the subway fare.
+		So when she stays out late with friends, and decides to book a ride home, she makes sure someone's along the way to share the fare with them.
     </div>
     <div class="block">
 		"I can't afford to take a cab or Uber every time. I won't be able to eat anymore," she said in jest.
@@ -448,8 +449,8 @@ html, body {
 		<strong>New normal for MTA</strong>
 	</div>
     <div class="block">
-        Since then, ridership improved a bit. Data showed average weekday passengers rose to 57% of their 2019 level on the third week of July, up from just about 49% same period a year ago. 
-		Thomas Abdallah, deputy vice president and chief environmental engineer at the MTA, said with gas prices still elevated, car owners may "think twice" of paying more at the pump, ride the subway instead, and push up ridership further.
+        Since then, ridership improved a bit. Data showed average weekday passengers rose to 57% of their 2019 level on the third week of July, up from about 49% same period a year ago. 
+		Thomas Abdallah, deputy vice president and chief environmental engineer at the MTA, said with gas prices still elevated, car owners may "think twice" of paying more at the pump, ride the subway instead, and push ridership up further.
     </div>
     <div class="block">
         But returning to pre-pandemic level may no longer be possible. In October, the MTA projected a "new normal" of about 1.5 billion customers annually by 2024, down from around 1.7 billion before 2020, citing a "change on behavior" among commuters for the projected decline. 
