--- a/index.html
+++ b/index.html
@@ -714,13 +714,25 @@ html, body {
     <div class="block">
 		"Crime isn't nearly so dramatic as the focus on it would suggest," Pearlstein said. "People by and large believe directly that they are going to be able to ride without an incident."
     </div>
+	<div class="block">
+        <p class="mb-1 title is-5">Subway crime rate is very, very low</p>
+        <p class="mt-1 subtitle is-6">Less than 1 crime incident per 100,000 population recorded in past two years</p>
+	</div>
+	<div id="chart-waffle-1">
+		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" type="text/javascript"></script>
+		<script src="./d3-waffle.js"></script>
+		<script src="./chart.js"></script>
+	</div>
+	<div class="block">
+	    <p class="subtitle is-6">Sources: NYPD, MTA</p>
+	</div>
     <div class="block">
-        The city has also been responsive to safety concerns, increasing <a href="https://www.nbcnews.com/think/opinion/nyc-subway-attack-police-isnt-answer-rcna24605" target="_blank">police presence</a> in stations during peak hours. 
+        The city has also responded to safety concerns, increasing <a href="https://www.nbcnews.com/think/opinion/nyc-subway-attack-police-isnt-answer-rcna24605" target="_blank">police presence</a> in stations during peak hours. 
 		Mayor Eric Adams also <a href="https://www1.nyc.gov/office-of-the-mayor/news/087-22/mayor-adams-releases-subway-safety-plan-says-safe-subway-prerequisite-new-york-city-s#/0" target="_blank">pledged</a> to augment response teams and open more "safe haven" centers to assist riders.
     </div>
     <div class="block">
-        For the most part however, Freemark said commuters choose to ride the subway because the benefits of convenience and getting to destination on time still outweigh the risks. 
-		And this shows even among people who have grown averse of the subway: Morcos said she doesn't foresee ditching the subway anytime soon. Daanoy said it's just impossible to do it, while Tomita, a tourist, said it remains an option for her when visiting.
+        For the most part however, Freemark said commuters ride the subway because they know the convenience and getting to destination on time far outweigh the risks. 
+		And this shows even among people who have recently grown averse of the subway: Morcos said she doesn't foresee ditching the subway anytime soon. Daanoy said it's just impossible to do it, while Tomita, the tourist, said it remains an option for her when visiting.
     </div>
     <div class="block">
         Attracting passengers lost back to the system is good, but Abdallah said it also may be time to shift focus to the ones left. Planning for a "new normal", he said, involves devising a plan that involves the efficient use of subway resources. 
@@ -732,7 +744,7 @@ html, body {
     </div>
     <div class="block">
 		Against other metrics, subway ridership has lagged behind retail sales, job generation, and Broadway <a href="https://comptroller.nyc.gov/newsroom/new-york-by-the-numbers-monthly-economic-and-fiscal-outlook-no-66-june-6th-2022/" target="_blank">ticket sales</a> when it comes to pandemic recovery. 
-		In-person classes have long resumed, and tourists are flying back to the Big Apple, yet none of them successfully ramped up ridership to a level the MTA would want it to be.
+		In-person classes have long resumed, and tourists are flying back, yet none of them successfully ramped up ridership to a level the MTA would want it to be.
     </div>
     <div class="block">
 		While the jury is still out as to how the subway's recovery will look like, one thing for sure is it will never be left deserted. "I don't think it's going to decline further," Freemark said, pertaining to ridership. And if Robert Paaswell, engineering professor at City University of New York, is to be believed, a full rebound may even be possible.
