--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ html, body {
           </div>
           <div class="block">
             Employees like Morcos have minimized riding the subway, whether because they got used working from home at the height of pandemic, or fear getting victimized amid rising crime (which also contributed to her decision). 
-			Regardless of reason, their decision has had serious repercussions on the train system: over a year since mobility restrictions were lifted, ridership has not beyond about 60% of their pre-pandemic level in 2019.
+			Regardless of reason, their decision has had serious repercussions on the train system: over a year since mobility restrictions were lifted, ridership has not gone up beyond above 60% of their pre-pandemic level in 2019.
           </div>
           <div class="block">
             Yet even as riders stayed away, they never completely abandoned the subway. Morcos unhesitatingly boards the train on weekends, relying on its vast network to meet friends and run errands. "There's no better way to get to your destination fast and the subway is also less crowded during weekends so it's very convenient," she said.
@@ -154,23 +154,24 @@ html, body {
 			Those are still way below pre-pandemic levels, but, as Yonah Freemark, senior research associate at Washington, D.C.-based Urban Institute puts it, "that's still a lot of people" and crowding in coaches is still very much common these days.
         </div>
         <div class="block">
-            Crowding may speak of the many things ignored of the aging infrastructure — inadequate federal and state aid plus huge budget deficits set to reach <a href="https://www.osc.state.ny.us/files/reports/osdc/pdf/report-10-2022.pdf" target="_blank">$4.8 billion</a> this year meant underinvestment. 
-			But when examined using the lens of how New Yorkers depended on the subway to move around, the dire image carries a much positive meaning of an infrastructure that has become the lifeblood of the city.
+            Crowding may speak of the many things ignored of the aging railway — inadequate federal and state aid plus huge budget deficits set to reach <a href="https://www.osc.state.ny.us/files/reports/osdc/pdf/report-10-2022.pdf" target="_blank">$4.8 billion</a> this year meant underinvestment. 
+			But when examined using the lens of how New Yorkers depended on the subway to move around, the dire image carries a more positive meaning of an infrastructure that has become the lifeblood of the city.
         </div>
         <div class="block">
-            Hence despite grim financial prospects, analysts are one in saying that the subway is here to stay. Ridership may decline, but people will continue to patronize the subway, one of the largest in the world, as it remains the best way to go around the city without a more viable alternative.
+            Hence despite grim financial prospects, analysts are one in saying that the subway is here to stay. Ridership may decline, but people will continue to patronize it without a more viable transport alternative.
         </div>
         <div class="block">
             "The subway plays an incredibly important role in just assuring basic daily mobility for the majority of people," Freemark said.
         </div>
         <div class="block">
-			Such reliance on the subway is not because of inadequate transport options. On the ground, buses ply the roads, cabs hailed, and Uber rides are booked. Nearly half of the city's households also own a car. But these alternatives, while always available, get beaten by the subway for efficiency and punctuality. 
+			The reliance on the subway is not due to inadequate transport options. On the ground, buses ply the roads, cabs hailed, and Uber rides are booked. Nearly half of the city's households also own a car. 
+			But these alternatives, while always available, get beaten by the subway for efficiency and punctuality. 
 		</div>
 		<div class="block">
-			Sure, the subway also gets delayed sometimes— <a href="http://dashboard.mta.info/" target="_blank">MTA data</a> showed that in May, passengers waited an additional 82 seconds than usual during peak hours on weekdays— but unless maintenance work is ongoing or, God forbid, an accident happens, commuters can easily estimate how long their trip will be.
+			Sure, the subway also gets delayed sometimes— <a href="http://dashboard.mta.info/" target="_blank">MTA data</a> showed that in May, passengers waited an additional 82 seconds than usual during peak hours on weekdays— but unless there is maintenance work or, God forbid, an accident happens, commuters can easily estimate how long their trip will be.
         </div>
         <div class="block">
-            New York traffic is the worst among key cities in the U.S., and it is so dense that there's no space to build new roads, highways or even parking lots to accommodate more vehicles, Freemark said. 
+            New York traffic is the worst among key cities in the U.S. The city is also so dense that there's no space to build new roads, highways or even parking lots to accommodate more vehicles, Freemark said. 
 			"That's what makes the subway a fundamental part of the city," he said.
         </div>
         <div class="block">
