--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ html, body {
           </div>
           <div class="block">
             Employees like Morcos have minimized riding the subway, whether because they got used working from home at the height of pandemic, or fear getting victimized amid rising crime (which also contributed to her decision). 
-			Regardless of reason, their decision has had serious repercussions on the train system: over a year since mobility restrictions were lifted, ridership has not gone up beyond above 60% of their pre-pandemic level in 2019.
+			Regardless of reason, their decision has had serious repercussions on the train system: over a year since mobility restrictions were lifted, ridership has not gone up beyond 60% of their pre-pandemic level in 2019.
           </div>
           <div class="block">
             Yet even as riders stayed away, they never completely abandoned the subway. Morcos unhesitatingly boards the train on weekends, relying on its vast network to meet friends and run errands. "There's no better way to get to your destination fast and the subway is also less crowded during weekends so it's very convenient," she said.
