--- a/index.html
+++ b/index.html
@@ -707,9 +707,6 @@ html, body {
         Mio Tomita arrived in June for a summer program and has been taking the subway from 96th Street station to Columbia. But that will change come mid-August when her mom and daughter join her in the city. “To be honest, a lot of my colleagues here tell me not to take the subway,” said Tomita, who works as a reporter in Japan. "If it's just me, it's okay. But my mom and daughter see the news from here and taking the subway make them scared," she said.
     </div>
     <div class="block">
-		"To be honest, a lot of my colleagues here tell me not to take the subway," said Tomita, who works as a reporter in Japan.
-    </div>
-    <div class="block">
 		While safety concerns are valid, Danny Pearlstein, policy communications director at Riders Alliance, a commuter's group, stressed that the subway remains remarkably safe. Government data support this: riders still very rarely experience crime in the subway despite a marked increase over the past two years.
     </div>
     <div class="block">
@@ -732,8 +729,8 @@ html, body {
 		Mayor Eric Adams also <a href="https://www1.nyc.gov/office-of-the-mayor/news/087-22/mayor-adams-releases-subway-safety-plan-says-safe-subway-prerequisite-new-york-city-s#/0" target="_blank">pledged</a> to augment response teams and open more "safe haven" centers to assist riders.
     </div>
     <div class="block">
-        For the most part however, Freemark said commuters ride the subway because they know the convenience and getting to destination on time far outweigh the risks. 
-		And this shows even among people who have recently grown averse of the subway: Morcos said she doesn't foresee ditching the subway anytime soon. Daanoy said it's just impossible to do it, while Tomita, the tourist, said it remains an option for her when visiting.
+        For the most part however, Freemark said commuters ride the subway because the convenience far outweigh the risks. 
+		And this shows even among people who have recently grown averse it: Morcos said she doesn't foresee ditching the subway anytime soon. Daanoy said it's just impossible to do it, while Tomita, the tourist, said it remains an option for her when visiting.
     </div>
     <div class="block">
         Attracting passengers lost back to the system is good, but Abdallah said it also may be time to shift focus to the ones left. Planning for a "new normal", he said, involves devising a plan that involves the efficient use of subway resources. 
@@ -744,7 +741,7 @@ html, body {
 		The last federal aid was given last year as part of Covid-19 response, but transport advocates are calling for more.
     </div>
     <div class="block">
-		Against other metrics, subway ridership has lagged behind retail sales, job generation, and Broadway <a href="https://comptroller.nyc.gov/newsroom/new-york-by-the-numbers-monthly-economic-and-fiscal-outlook-no-66-june-6th-2022/" target="_blank">ticket sales</a> when it comes to pandemic recovery. 
+		Against other metrics, subway ridership has lagged behind <a href="https://www.census.gov/retail/marts/www/marts_current.pdf" target="_blank">retail sales</a>, <a href="https://www.bls.gov/news.release/empsit.nr0.htm" target="_blank">job generation</a>, and Broadway <a href="https://comptroller.nyc.gov/newsroom/new-york-by-the-numbers-monthly-economic-and-fiscal-outlook-no-66-june-6th-2022/" target="_blank">ticket sales</a> when it comes to pandemic recovery. 
 		In-person classes have long resumed, and tourists are flying back, yet none of them successfully ramped up ridership to a level the MTA would want it to be.
     </div>
     <div class="block">
