--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ html, body {
 	</div>
 	<div id="chart-waffle-1">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" type="text/javascript"></script>
-		<script src="./d3-waffle.js"></script>
+		<script src="./waffle-new.js"></script>
 		<script src="./chart.js"></script>
 	</div>
 	<div class="block">
