--- a/index.html
+++ b/index.html
@@ -478,9 +478,6 @@ html, body {
     <div class="block">
         It remains to be seen whether the fare increase would push through this year, but when the initial delay was announced, Patrick Foye, former MTA chair and chief executive, also cited the need to attract back riders, who, theoretically, would have been deterred by higher fares.
     </div>
-	<div class="block">
-		<strong>New normal for MTA</strong>
-	</div>
     <div class="block">
         Since then, ridership improved a bit. Data showed average weekday passengers rose to 57% of their 2019 level on the third week of July, up from about 49% same period a year ago. 
 		Thomas Abdallah, deputy vice president and chief environmental engineer at the MTA, said with gas prices still elevated, car owners may "think twice" about paying more at the pump, ride the subway instead, and support ridership further.
@@ -751,7 +748,7 @@ html, body {
 	<div class="spread-text">
 			<p>These <span style="background: #e3e3e3"><strong>squares</strong></span> represent 100,000 subway riders.</p>
 			<p>According to NYPD and MTA data, crime rate at the subway averaged <span style="background: #780f49"><span class="has-text-white has-text-weight-bold">0.53 in 100,000 riders </span></span>over the past two years.</p>
-			<p>In short, riders still very rarely experience crme in the subway. "Crime <strong>isn't nearly so dramatic</strong> as the focus on it would suggest," Pearlstein said.</p>
+			<p>In short, riders still very rarely experience crime in the subway. "Crime <strong>isn't nearly so dramatic</strong> as the focus on it would suggest," Pearlstein said.</p>
 			<p>"People by and large believe directly that they are going to be able to ride without an incident," he said.</p>
 		</div>
 	</div>
