--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@ html, body {
 		Thomas Abdallah, deputy vice president and chief environmental engineer at the MTA, said with gas prices still elevated, car owners may "think twice" about paying more at the pump, ride the subway instead, and support ridership further.
     </div>
     <div class="block">
-        But returning to pre-pandemic level may no longer be realistic. In October, the MTA projected a "new normal" of about 1.5 billion customers annually by 2024, down from around 1.7 billion before 2020, citing a "change on behavior" among commuters for the projected decline. 
-		Abdallah said remote work is to blame as it becomes entrenched even when the pandemic is over.
+        But returning to pre-pandemic level may no longer be realistic as the MTA itself has admitted. Citing <a href="https://new.mta.info/document/91721" target="_blank">July projections</a> by McKinsey and Co., subway ridership would only hit as much as 80% of pre-pandemic levels by 2026, compared with February's forecast of 87%. 
+		People working from home was cited as primary reason for the "substantial" decline.
     </div>
 	<div class="block">
-		Office occupancy in New York has so far hovered around 40%, according to <a href="https://www.kastle.com/safety-wellness/getting-america-back-to-work/?utm_campaign=Occupancy%20Request&utm_medium=email&_hsmi=218756782&_hsenc=p2ANqtz--V5Agd_e5JesPHvs_AUoqdGuOqLR_qrQ_8DoSmvB8lOfv4iKK9d9eX97rVOdNA-qaAT0vwEnHPNVp8QZ6y1A2oh8YfGw&utm_content=218756782&utm_source=hs_email" target="_blank">Kastle Systems</a>, a consultancy that tracks entries to offices weekly. 
 		Our analysis showed that office occupancy tends to move proportionately with subway ridership. That greatly helps explain why even with pandemic restrictions lifted for over a year now, low passenger volumes have persisted.
+		Office occupancy in New York has so far hovered around 40%, according to <a href="https://www.kastle.com/safety-wellness/getting-america-back-to-work/?utm_campaign=Occupancy%20Request&utm_medium=email&_hsmi=218756782&_hsenc=p2ANqtz--V5Agd_e5JesPHvs_AUoqdGuOqLR_qrQ_8DoSmvB8lOfv4iKK9d9eX97rVOdNA-qaAT0vwEnHPNVp8QZ6y1A2oh8YfGw&utm_content=218756782&utm_source=hs_email" target="_blank">Kastle Systems</a>, a consultancy that tracks entries to offices weekly. 
 	</div>
     <div class="block">
         <p class="mb-1 title is-5">Subway ridership largely tracks office occupancy</p>
