--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ html, body {
 		</div>
 		<div class="block">
 			Coming on top of pre-existing fiscal problems — due to long-term underinvestment and state and federal aid that has fallen short of what transportation experts say is needed — the falloff in ridership paints a dire financial picture for the subway. 
-			Already huge budget deficits are set to widen to $2.6 billion over the next two years, the MTA projects.
+			Already huge budget deficits are set to widen to <a href="https://new.mta.info/press-release/mta-preliminary-budget-forecasts-fiscal-cliff-closer-and-looms-larger-ridership" target="_blank">$2.6 billion</a> over the next two years, the MTA projects.
         </div>
         <div class="block">
             So, what's the future of the system that has been viewed as the lifeblood of the city that never sleeps? Ridership will stay subdued and will cut through MTA's earnings. 
