--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@ html, body {
 
   </style>
 
-<script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/scrollama/3.0.4/scrollama.min.js"></script>
-
   <body>
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -160,7 +157,7 @@ html, body {
 			“That's still a lot of people,” said Yonah Freemark, senior research associate at Washington, D.C.-based Urban Institute, a think tank.
         </div>
         <div class="block">
-            But against other metrics of the Big Apple's return to normal, subway ridership has lagged — behind retail sales, job generation and Broadway ticket sales. 
+            But against other metrics of the Big Apple's return to normal, subway ridership has lagged — behind retail sales, <a href="https://www.bls.gov/news.release/empsit.nr0.htm" target="_blank">job generation</a> and Broadway <a href="https://comptroller.nyc.gov/newsroom/new-york-by-the-numbers-monthly-economic-and-fiscal-outlook-no-66-june-6th-2022/#nyc-return-to-office" target="_blank">ticket sales</a>. 
 			In-person classes at city schools and universities have long since resumed, and droves of tourists are flying back, but the MTA has yet to see that sort of robust rebound in ridership.
         </div>
         <div class="block">
@@ -184,6 +181,9 @@ html, body {
 		</div>
 		<div class="block">
 			"The subway plays an incredibly important role in just assuring basic daily mobility for the majority of people," Freemark said.
+		</div>
+		<div class="block">
+			<strong>The remote work impact</strong>
 		</div>
 		<div class="block">
 			New Yorkers have plenty of ways to get around. On the ground, buses ply the roads, cabs are hailed, and Uber rides are booked. Nearly half of the city's households also own a car. 
@@ -738,7 +738,7 @@ html, body {
 </div>
 <div class="container column is-one-third-desktop is-full-mobile is-half-tablet">
     <div class="block">
-		The MTA has embarked on several efforts to attract its old patrons back —adding more train services, and offering discounts and a fare-cap mechanism. 
+		The MTA has embarked on several efforts to attract its old patrons back —adding more train services, and offering discounts and a <a href="https://new.mta.info/fares/omny-fare-capping" target="_blank">fare-cap</a> mechanism. 
 		Under the latter, commuters using the OMNY fare system ride for free after 12 trips in a week. The program has not been officially assessed, but Abdallah said the impact on ridership was likely limited at best.
     </div>
     <div class="block">
@@ -984,7 +984,7 @@ html, body {
 		Although the jury is still out as to how the subway's recovery will look like, New Yorkers will continue to ride the subway. "I don't think it's going to decline further," Freemark said.
     </div>
 	<div class="block">
-		And if Robert Paaswell, engineering professor at City University of New York who have researched on the subway, is to be believed, a full rebound may even be possible.
+		And if Robert Paaswell, engineering professor at City University of New York who have studied the subway, is to be believed, a full rebound may even be possible.
 	</div>
 	<div class="block">
 		"People want to be in crowds, want to be with their office mates or go to the restaurant or bars," he said.
