--- a/2r23V--insert-title-here--rgb-_1_svg.html
+++ b/2r23V--insert-title-here--rgb-_1_svg.html
@@ -108,7 +108,7 @@
 		<div id="g-ai0-7" class="g-exportSvg g-aiAbs g-aiPointText" style="top:69.6688%;margin-top:-29.7px;right:36.4316%;width:207px;">
 			<p class="g-pstyle3">Gap between ridership</p>
 			<p class="g-pstyle3">on peak and offpeak hours</p>
-			<p class="g-pstyle3">have narrowed</p>
+			<p class="g-pstyle3">has narrowed</p>
 		</div>
 		<div id="g-ai0-8" class="g-exportSvg g-aiAbs g-aiPointText" style="top:65.615%;margin-top:-11px;right:92.0455%;width:60px;">
 			<p class="g-pstyle2">2021</p>
