--- a/index.html
+++ b/index.html
@@ -485,16 +485,13 @@ html, body {
 			New revenue streams will have to be identified to offset losses, analysts said, while existing resources will have to be better deployed to serve those who continue to ride.
         </div>
 		<div class="block">
-			'Fundamental part of the city'
+			<strong>'Fundamental part of the city'</strong>
 		</div>
 		<div class="block">
 			Despite the grim financial prospects however, there's no doubt that the subway is here to stay. People will continue to patronize the underground railway system, one of the largest in the world, as it remains the best way to go around the city without a more viable alternative.
 		</div>
 		<div class="block">
 			"The subway plays an incredibly important role in just assuring basic daily mobility for the majority of people," Freemark said.
-		</div>
-		<div class="block">
-			<strong>The remote work impact</strong>
 		</div>
 		<div class="block">
 			New Yorkers have plenty of ways to get around. On the ground, buses ply the roads, cabs are hailed, and Uber rides are booked. Nearly half of the city's households also own a car. 
