--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ html, body {
 			Already huge budget deficits are set to widen to <a href="https://new.mta.info/press-release/mta-preliminary-budget-forecasts-fiscal-cliff-closer-and-looms-larger-ridership" target="_blank">$2.6 billion</a> over the next two years, the MTA projects.
         </div>
         <div class="block">
-            So, what's the future of the system that has been viewed as the lifeblood of the city that never sleeps? Ridership will stay subdued and will cut through MTA's earnings. 
+            So, what's the future of the system that has been viewed as the lifeblood of the city that never sleeps? Ridership will stay subdued and will cut through the MTA's earnings. 
 			New revenue streams will have to be identified to offset losses, analysts said, while existing resources will have to be better deployed to serve those who continue to ride.
         </div>
 		<div class="block">
@@ -727,7 +727,7 @@ html, body {
     </div>
     <div class="block">
 		While prices of everything from potatoes to real estate are on the rise, MTA fares have been steady for nearly three years now. Plans for a 4% fare hike in 2021 were dropped to ease the burden on customers reeling from the pandemic. 
-		The fare increase was postponed again this year after state funding was hiked, helping cover for the gap in fare revenues.
+		The fare increase was postponed again this year after state funding was hiked, helping cover the gap in fare revenues.
     </div>
     <div class="block">
         Since then, ridership has improved a bit. Data showed average weekday passengers rose to 57% of their 2019 level on the third week of July, up from just about 49% same period a year ago. 
@@ -735,10 +735,10 @@ html, body {
 	</div>
     <div class="block">
 		The MTA has embarked on several efforts to attract its old patrons back, including discounts and a <a href="https://new.mta.info/fares/omny-fare-capping" target="_blank">fare-cap</a> mechanism. 
-		Under the latter, commuters using the OMNY fare system ride for free after 12 trips in a week. The program has not been officially assessed, but Abdallah doubted the program would have a significant impact on ridership.
+		Under the latter, commuters using the OMNY fare system ride for free after 12 trips in a week. The program has not been officially assessed, but Abdallah doubted it would have a significant impact on ridership.
     </div>
     <div class="block">
-        "Most people take the train 10 times a week, going to the office and back, and that's during normal times," he said, indicating that there may only be a few people qualifying to the promo.
+        "Most people take the train 10 times a week, going to the office and back, and that's during normal times," he said, indicating that there may only be a few people qualifying for the incentive.
     </div>
 	<div class="block">
 		<strong>Crimes up but still relatively rare</strong>
@@ -971,7 +971,7 @@ html, body {
 		<strong>Shift of focus</strong>
 	</div>
     <div class="block">
-		Attracting passengers lost by the subway is good, but Abdallah said it also may be time to shift focus onto those who still ride regularly. Planning for a “new normal”, he said, entails more efficient use of subway resources.
+		Attracting passengers lost by the subway is worthwhile, but Abdallah said it also may be time to shift focus onto those who still ride regularly. Planning for a “new normal”, he said, entails more efficient use of subway resources.
     </div>
     <div class="block">
 		"I don't know the exact answer," he said, but rethinking whether current peak and non-peak hours continue to reflect the new reality, given remote work, is a good starting point.
@@ -1139,7 +1139,7 @@ html, body {
 </div>
 <div class="container column is-one-third-desktop is-full-mobile is-half-tablet">
     <div class="block">
-		Meanwhile, despite recent infusions of state and federal aid, Pearlstein is advocating for more as fare revenues, which account for 28% of MTA's annual operating budget, are not projected to rise in the near future. If ridership, as MTA projects, will stay way below normal for years to come, funds used to sustain subway operations should come from elsewhere. 
+		Meanwhile, despite recent infusions of state and federal aid, Pearlstein is advocating for more as fare revenues, which account for 28% of the MTA's annual operating budget, are not projected to rise in the near future. If ridership, as the MTA projects, will stay way below normal for years to come, funds used to sustain subway operations should come from elsewhere. 
 		The MTA received $6 billion early this year for the subway as part of the American Rescue Plan.
     </div>
     <div class="block">
